@@ -2,6 +2,7 @@
 
 	* gnus-start.el (gnus-clean-old-newsrc): Remove totally bogus
 	`unexists' entries.
+	(gnus-clean-old-newsrc): Fix last checkin.
 
 	* nnimap.el (nnimap-update-info): None of the articles below the active
 	low-water mark exist.
